--- a/src/components/popup/popup.styles.css
+++ b/src/components/popup/popup.styles.css
@@ -21,7 +21,7 @@
     border: none;
 
     background-color: transparent;
-    background-image: url(../../../../images/Close.png);
+    background-image: url(././../../images/Close.png);
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center center;
