--- a/src/components/modal/modal.styles.css
+++ b/src/components/modal/modal.styles.css
@@ -83,6 +83,7 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  align-self: center;
 }
 @media (max-width: 600px) {
   .popup__title {
